--- a/.buildkite/longruns/pipeline.yml
+++ b/.buildkite/longruns/pipeline.yml
@@ -141,7 +141,7 @@ steps:
           slurm_ntasks: 96
       
       - label: ":computer: held suarez (ρe_tot) equilmoist high resolution hightop"
-        command: "mpiexec julia --project=examples examples/hybrid/driver.jl --forcing held_suarez --moist equil --vert_diff true --surface_scheme bulk --microphy 0M --z_max 45e3 --z_elem 45 --dz_bottom 30 --h_elem 16 --kappa_4 1e16 --viscous_sponge true --kappa_2_sponge 1e7 --zd_viscous 30e3 --rayleigh_sponge true --zd_rayleigh 30e3 --alpha_rayleigh_uh 0 --dt 150secs --t_end 100days --job_id longrun_hs_rhoe_equilmoist_highres_hightop --dt_save_to_disk 10days"
+        command: "mpiexec julia --project=examples examples/hybrid/driver.jl --forcing held_suarez --moist equil --vert_diff true --surface_scheme bulk --microphy 0M --z_max 45e3 --z_elem 50 --dz_bottom 30 --dz_top 3000 --h_elem 16 --kappa_4 1e16 --rayleigh_sponge true --zd_rayleigh 30e3 --alpha_rayleigh_uh 0 --alpha_rayleigh_w 10 --dt 150secs --t_end 200days --job_id longrun_hs_rhoe_equilmoist_highres_hightop --dt_save_to_disk 10days"
         artifact_paths: "longrun_hs_rhoe_equilmoist_highres_hightop/*"
         env:
           CLIMACORE_DISTRIBUTED: "MPI"
